--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -17,7 +17,102 @@
       <dt>Image url</dt>
       <dd><%= @actor.image_url %></dd>
 
+      <dt>Number of Characters</dt>
+      <dd><%= Character.where(:actor_id => @actor.id).count %></dd>
+
+      <dt>List of Characters</dt>
+      <dd>
+        <% Character.where(:actor_id => @actor.id).each do |character| %>
+        <li>
+          <%= character.name %>
+        </li>
+        <% end  %>
+      </dd>
+
+      <dt>List of Movies</dt>
+      <dd>
+        <% Character.where(:actor_id => @actor.id).each do |character| %>
+        <li>
+          <%= Movie.find(character.movie_id).title %>
+        </li>
+        <% end  %>
+      </dd>
+
     </dl>
+
+
+    <!-- NEW CHARACTER FORM BELOW -->
+
+    <!-- Validation failure messages -->
+    <% if @character.errors.any? %>
+    <% @character.errors.full_messages.each do |message| %>
+    <div class="alert alert-dismissable alert-danger">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= message %>
+    </div>
+    <% end %>
+    <% end %>
+
+    <div class="page-header">
+      <h3>Add Character</h3>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <form action="/create_character" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+          <!-- Label and input for movie_id -->
+          <div class="form-group">
+            <label for="movie_id" class="control-label">
+              Movie
+            </label>
+
+            <%= select_tag("movie_id", options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control") %>
+
+            <!-- <input type="text" id="movie_id" name="movie_id" placeholder="Movie" class="form-control" value="<%= @character.movie_id %>"> -->
+          </div>
+
+          <!-- Label and input for actor_id -->
+          <div class="form-group">
+            <!-- <label for="actor_id" class="control-label">
+              Actor
+            </label> -->
+
+            <input type="hidden" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= @character.actor_id %>">
+          </div>
+
+          <!-- Label and input for name -->
+          <div class="form-group">
+            <label for="name" class="control-label">
+              Name
+            </label>
+
+            <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @character.name %>">
+          </div>
+
+          <button class="btn btn-success">
+            Create Character
+          </button>
+          or
+          <a href="/characters">Cancel</a>
+
+          <p>
+            Don't see your movie in the list? Add it
+            <a href="http://localhost:3000/movies/new">
+              here
+            </a>
+            .
+          </p>
+
+
+        </form>
+      </div>
+    </div>
+
+
+    <!-- NEW CHARACTER FORM ABOVE -->
 
     <div class="btn-group btn-group-justified">
       <a href="/actors" class="btn btn-primary">
